app/assets/stylesheets/app.scss
/* ... */
.btn-dotted:hover {
  border-radius: 0.25rem
}


.slick-container .slick-responsive {
  margin-bottom: 25px
}

.slick-container .slick-item {
  display: none;
  padding-left: 7.5px;
  padding-right: 7.5px;
}

.slick-container .slick-item:nth-child(1) {
  display: block;
}

@media(min-width: 576px) {
  .slick-container .slick-item:nth-child(2) {
    display: block;
  }
}

@media(min-width: 992px) {
  .slick-container .slick-item:nth-child(3) {
    display: block;
  }
}

.slick-container .slick-responsive.slick-initialized .slick-item {
  display: block;
}

.slick-container .slick-responsive.slick-initialized .slick-item {
  max-width: none !important
}

.slick-placeholder {
  letter-spacing: -1px
}

.slick-placeholder .slick-dots {
  opacity: .25
}

.slick-next:before {
  content: none
}

.slick-prev:before {
  content: none
}

.slick-prev {
  left: 0px
}

.slick-next {
  right: 0px
}

.slick-next:focus,
.slick-next:hover,
.slick-prev:focus,
.slick-prev:hover {
  color: black;
  background: white;
  opacity: 0.75;
}

.slick-prev,
.slick-next {
  border-radius: 50% !important;
  background: white;
  font-size: 40px;
  width: 40px;
  height: 40px;
  z-index: 2;
  color: black;
  opacity: 0.5;
}

.float-sub-menu {
  z-index: 99
}

.infowindow .row {
  margin: 0
}

.ck-progress-bar {
  height: 100% !important;
  width: 100% !important;
  background: white !important;
  animation-name: opacity;
  animation-duration: 2s;
  animation-iteration-count: infinite;
}

figure.image,
.ck-content .image {
  margin-bottom: 1em !important
}

@keyframes opacity {
  0% {
    opacity: 0.5;
  }

  50% {
    opacity: 0.75;
  }

  100% {
    opacity: 0.5;
  }
}

.row.block.no-gutters.align-items-stretch {
  margin: 0
}

@media(min-width: 992px) {
  .row.block.no-gutters.align-items-stretch {
    background: $bg_well;
    border-radius: 0.25rem;
  }
}

.search.well {
  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
}

@media(min-width: 992px) {
  .search.well {
    padding-top: 1.0875rem;
    padding-bottom: 0;
  }
}

.search.well .checkbox-inline {
  cursor: auto;
  background-color: white;
  padding: 0.3rem;
  padding-bottom: 0.2rem;
  border-radius: 0.25rem
}

.search.well .checkbox-inline label {
  cursor: pointer
}

.search.well .checkbox-inline.checked {
  border: 1px solid $color_primary;
}

@media(min-width: 576px) {
  .search.well input[type=submit] {
    margin: 0 !important
  }
}

@keyframes flickerAnimation {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.5;
  }

  100% {
    opacity: 1;
  }
}

.flicker {
  animation: flickerAnimation 2s infinite;
}

.sponsored {
  text-decoration: none !important;
}

.page-sidebar-minified #git-badge {
  display: none
}

a.home-feedback {
  color: $body_text;
  text-decoration: none;
}


.ck-content .image-style-align-left,
.image-style-align-left {
  float: none !important;
  margin-right: auto !important;
  text-align: left !important;
}

.ck-content .image-style-align-right,
.image-style-align-right {
  float: none !important;
  margin-left: auto !important;
  text-align: right !important;
}

.ck-content .image-style-align-center,
.image-style-align-center {
  float: none !important;
  margin-left: auto !important;
  margin-right: auto !important;
  text-align: center !important;
}


.input-group-text {
  padding: 0.375rem 0.5rem
}

#donation-percent-buttons .btn {
  padding: 0.375rem 0.5rem
}

p.action {
  text-align: center
}

p.action a {
  display: inline-block;
  background: $color_primary !important;
  color: white;
  text-decoration: none;
  padding: 10px;
  border-radius: 5px
}

p.action a:hover {
  background: $color_primary_hover !important;
}

.ck-editor th,
.ck-editor td {
  border: 1px solid #bfbfbf !important;
}

.embed-responsive-ps::before {
  padding-top: 52.5%;
}

@media screen and (max-width: 767px) {
  div.dataTables_wrapper div.dataTables_filter {
    text-align: left;
  }
}

@media(min-width: 576px) {

  form.searchForm input,
  form.searchForm select {
    max-width: 12em
  }
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.bi-spin {
  display: inline-block;
  animation: spin 2s linear infinite;
}

.icon-list {
  list-style-type: none;
  padding-left: 0;
}

.icon-list>li {
  position: relative;
  padding-left: 2em;
}

.icon-list>li>.bi {
  position: absolute;
  left: 0;
  top: 0;
}

@media(max-width: 767px) {
  .nav-wrapper .nav-tabs {
    border-bottom: 0;
    flex-wrap: nowrap;
  }

  .nav-wrapper .nav-link {
    white-space: nowrap;
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }

  .nav-wrapper {
    -webkit-overflow-scrolling: touch;
    overflow-x: scroll;
    overflow-y: hidden;
  }

  .nav-wrapper::-webkit-scrollbar {
    height: 6px;
    display: block;
  }

  .nav-wrapper::-webkit-scrollbar-track {
    background: #f1f1f1;
  }

  .nav-wrapper::-webkit-scrollbar-thumb {
    background: #aaa;
    border-radius: 4px;
  }
}

.sidebar .nav li.has-sub .sub-menu>li>a {
  padding-bottom: 0.3125rem;
}

@media(max-width: 767px) {
  .sidebar .nav li>a {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
  }
}

.average-rating {
  font-size: 2em;
}

input[type="checkbox"] {
  accent-color: #29A95B;
}

label.remove-file,
label.remove-image {
  margin-top: 0.3125rem;
  font-weight: normal
}

label.remove-file input,
label.remove-image input {
  position: relative;
  top: 2px;
  margin-left: 5px;
}

.input-group {
  flex-wrap: nowrap;
}

.email-preview-iframe-container {
  overflow: hidden;
  padding-top: 56.25%;
  position: relative;
  height: 80vh;
}

.email-preview-iframe-container iframe {
  border: 0;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
}

.search-result-list>li {
  border-top: 0;
  border-bottom: 2px solid #ddd
}

